parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMA
    COMILLADOBLE
    COMILLASIMPLE
    DEF
    DO
    ELSE
    ENUM
    FINAL
    FOR
    IF
    IN
    IS
    LCORCH
    LIST
    LLLAVE
    MAS
    MASIGUAL
    MULTI
    MUTABLE_SET
    NULL
    OBJECT
    PACKAGE
    RCORCH
    READ_LINE
    RETURN
    RLLAVE
    SUPER
    THIS
    THROW
    TRY
    WHILE

Grammar

Rule 0     S' -> algoritmo
Rule 1     algoritmo -> declaracion
Rule 2     algoritmo -> comparacion
Rule 3     algoritmo -> imprimir
Rule 4     algoritmo -> agregarElemento
Rule 5     algoritmo -> obtenerElemento
Rule 6     algoritmo -> crearLista
Rule 7     declaracion -> declaracion_conTipo
Rule 8     declaracion -> <empty>
Rule 9     declaracion_conTipo -> tipoVariable ID DOSPUNT tipoDato asignacion
Rule 10    tipoVariable -> VAR
Rule 11    tipoVariable -> VAL
Rule 12    tipoDato -> INTEGER
Rule 13    tipoDato -> BOOLEAN
Rule 14    booleano -> TRUE
Rule 15    booleano -> FALSE
Rule 16    asignacion -> asignacion_simple
Rule 17    asignacion -> <empty>
Rule 18    asignacion_simple -> IGUAL valor
Rule 19    valor -> NUMERO
Rule 20    valor -> ID
Rule 21    valor -> booleano
Rule 22    comparacion -> comparacion_igual
Rule 23    comparacion -> comparacion_mayor
Rule 24    comparacion -> <empty>
Rule 25    comparacion_igual -> DOBLEIGUAL
Rule 26    comparacion_mayor -> MAYOR
Rule 27    imprimir -> PRINTLN LPAREN valor RPAREN
Rule 28    crearLista -> VAL ID DOSPUNT MUTABLE_LIST MENOR tipoDato MAYOR IGUAL MUTABLE_LIST_OF LPAREN valor RPAREN
Rule 29    agregarElemento -> ID PUNTO ADD LPAREN valor RPAREN
Rule 30    obtenerElemento -> ID PUNTO GET LPAREN NUMERO RPAREN

Terminals, with rules where they appear

ADD                  : 29
BOOLEAN              : 13
COMA                 : 
COMILLADOBLE         : 
COMILLASIMPLE        : 
DEF                  : 
DO                   : 
DOBLEIGUAL           : 25
DOSPUNT              : 9 28
ELSE                 : 
ENUM                 : 
FALSE                : 15
FINAL                : 
FOR                  : 
GET                  : 30
ID                   : 9 20 28 29 30
IF                   : 
IGUAL                : 18 28
IN                   : 
INTEGER              : 12
IS                   : 
LCORCH               : 
LIST                 : 
LLLAVE               : 
LPAREN               : 27 28 29 30
MAS                  : 
MASIGUAL             : 
MAYOR                : 26 28
MENOR                : 28
MULTI                : 
MUTABLE_LIST         : 28
MUTABLE_LIST_OF      : 28
MUTABLE_SET          : 
NULL                 : 
NUMERO               : 19 30
OBJECT               : 
PACKAGE              : 
PRINTLN              : 27
PUNTO                : 29 30
RCORCH               : 
READ_LINE            : 
RETURN               : 
RLLAVE               : 
RPAREN               : 27 28 29 30
SUPER                : 
THIS                 : 
THROW                : 
TRUE                 : 14
TRY                  : 
VAL                  : 11 28
VAR                  : 10
WHILE                : 
error                : 

Nonterminals, with rules where they appear

agregarElemento      : 4
algoritmo            : 0
asignacion           : 9
asignacion_simple    : 16
booleano             : 21
comparacion          : 2
comparacion_igual    : 22
comparacion_mayor    : 23
crearLista           : 6
declaracion          : 1
declaracion_conTipo  : 7
imprimir             : 3
obtenerElemento      : 5
tipoDato             : 9 28
tipoVariable         : 9
valor                : 18 27 28 29

Parsing method: LALR

state 0

    (0) S' -> . algoritmo
    (1) algoritmo -> . declaracion
    (2) algoritmo -> . comparacion
    (3) algoritmo -> . imprimir
    (4) algoritmo -> . agregarElemento
    (5) algoritmo -> . obtenerElemento
    (6) algoritmo -> . crearLista
    (7) declaracion -> . declaracion_conTipo
    (8) declaracion -> .
    (22) comparacion -> . comparacion_igual
    (23) comparacion -> . comparacion_mayor
    (24) comparacion -> .
    (27) imprimir -> . PRINTLN LPAREN valor RPAREN
    (29) agregarElemento -> . ID PUNTO ADD LPAREN valor RPAREN
    (30) obtenerElemento -> . ID PUNTO GET LPAREN NUMERO RPAREN
    (28) crearLista -> . VAL ID DOSPUNT MUTABLE_LIST MENOR tipoDato MAYOR IGUAL MUTABLE_LIST_OF LPAREN valor RPAREN
    (9) declaracion_conTipo -> . tipoVariable ID DOSPUNT tipoDato asignacion
    (25) comparacion_igual -> . DOBLEIGUAL
    (26) comparacion_mayor -> . MAYOR
    (10) tipoVariable -> . VAR
    (11) tipoVariable -> . VAL

  ! reduce/reduce conflict for $end resolved using rule 8 (declaracion -> .)
    $end            reduce using rule 8 (declaracion -> .)
    PRINTLN         shift and go to state 11
    ID              shift and go to state 12
    VAL             shift and go to state 13
    DOBLEIGUAL      shift and go to state 16
    MAYOR           shift and go to state 14
    VAR             shift and go to state 17

  ! $end            [ reduce using rule 24 (comparacion -> .) ]

    algoritmo                      shift and go to state 1
    declaracion                    shift and go to state 2
    comparacion                    shift and go to state 3
    imprimir                       shift and go to state 4
    agregarElemento                shift and go to state 5
    obtenerElemento                shift and go to state 6
    crearLista                     shift and go to state 7
    declaracion_conTipo            shift and go to state 8
    comparacion_igual              shift and go to state 9
    comparacion_mayor              shift and go to state 10
    tipoVariable                   shift and go to state 15

state 1

    (0) S' -> algoritmo .



state 2

    (1) algoritmo -> declaracion .

    $end            reduce using rule 1 (algoritmo -> declaracion .)


state 3

    (2) algoritmo -> comparacion .

    $end            reduce using rule 2 (algoritmo -> comparacion .)


state 4

    (3) algoritmo -> imprimir .

    $end            reduce using rule 3 (algoritmo -> imprimir .)


state 5

    (4) algoritmo -> agregarElemento .

    $end            reduce using rule 4 (algoritmo -> agregarElemento .)


state 6

    (5) algoritmo -> obtenerElemento .

    $end            reduce using rule 5 (algoritmo -> obtenerElemento .)


state 7

    (6) algoritmo -> crearLista .

    $end            reduce using rule 6 (algoritmo -> crearLista .)


state 8

    (7) declaracion -> declaracion_conTipo .

    $end            reduce using rule 7 (declaracion -> declaracion_conTipo .)


state 9

    (22) comparacion -> comparacion_igual .

    $end            reduce using rule 22 (comparacion -> comparacion_igual .)


state 10

    (23) comparacion -> comparacion_mayor .

    $end            reduce using rule 23 (comparacion -> comparacion_mayor .)


state 11

    (27) imprimir -> PRINTLN . LPAREN valor RPAREN

    LPAREN          shift and go to state 18


state 12

    (29) agregarElemento -> ID . PUNTO ADD LPAREN valor RPAREN
    (30) obtenerElemento -> ID . PUNTO GET LPAREN NUMERO RPAREN

    PUNTO           shift and go to state 19


state 13

    (28) crearLista -> VAL . ID DOSPUNT MUTABLE_LIST MENOR tipoDato MAYOR IGUAL MUTABLE_LIST_OF LPAREN valor RPAREN
    (11) tipoVariable -> VAL .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 20

  ! ID              [ reduce using rule 11 (tipoVariable -> VAL .) ]


state 14

    (26) comparacion_mayor -> MAYOR .

    $end            reduce using rule 26 (comparacion_mayor -> MAYOR .)


state 15

    (9) declaracion_conTipo -> tipoVariable . ID DOSPUNT tipoDato asignacion

    ID              shift and go to state 21


state 16

    (25) comparacion_igual -> DOBLEIGUAL .

    $end            reduce using rule 25 (comparacion_igual -> DOBLEIGUAL .)


state 17

    (10) tipoVariable -> VAR .

    ID              reduce using rule 10 (tipoVariable -> VAR .)


state 18

    (27) imprimir -> PRINTLN LPAREN . valor RPAREN
    (19) valor -> . NUMERO
    (20) valor -> . ID
    (21) valor -> . booleano
    (14) booleano -> . TRUE
    (15) booleano -> . FALSE

    NUMERO          shift and go to state 23
    ID              shift and go to state 24
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    valor                          shift and go to state 22
    booleano                       shift and go to state 25

state 19

    (29) agregarElemento -> ID PUNTO . ADD LPAREN valor RPAREN
    (30) obtenerElemento -> ID PUNTO . GET LPAREN NUMERO RPAREN

    ADD             shift and go to state 28
    GET             shift and go to state 29


state 20

    (28) crearLista -> VAL ID . DOSPUNT MUTABLE_LIST MENOR tipoDato MAYOR IGUAL MUTABLE_LIST_OF LPAREN valor RPAREN

    DOSPUNT         shift and go to state 30


state 21

    (9) declaracion_conTipo -> tipoVariable ID . DOSPUNT tipoDato asignacion

    DOSPUNT         shift and go to state 31


state 22

    (27) imprimir -> PRINTLN LPAREN valor . RPAREN

    RPAREN          shift and go to state 32


state 23

    (19) valor -> NUMERO .

    RPAREN          reduce using rule 19 (valor -> NUMERO .)
    $end            reduce using rule 19 (valor -> NUMERO .)


state 24

    (20) valor -> ID .

    RPAREN          reduce using rule 20 (valor -> ID .)
    $end            reduce using rule 20 (valor -> ID .)


state 25

    (21) valor -> booleano .

    RPAREN          reduce using rule 21 (valor -> booleano .)
    $end            reduce using rule 21 (valor -> booleano .)


state 26

    (14) booleano -> TRUE .

    RPAREN          reduce using rule 14 (booleano -> TRUE .)
    $end            reduce using rule 14 (booleano -> TRUE .)


state 27

    (15) booleano -> FALSE .

    RPAREN          reduce using rule 15 (booleano -> FALSE .)
    $end            reduce using rule 15 (booleano -> FALSE .)


state 28

    (29) agregarElemento -> ID PUNTO ADD . LPAREN valor RPAREN

    LPAREN          shift and go to state 33


state 29

    (30) obtenerElemento -> ID PUNTO GET . LPAREN NUMERO RPAREN

    LPAREN          shift and go to state 34


state 30

    (28) crearLista -> VAL ID DOSPUNT . MUTABLE_LIST MENOR tipoDato MAYOR IGUAL MUTABLE_LIST_OF LPAREN valor RPAREN

    MUTABLE_LIST    shift and go to state 35


state 31

    (9) declaracion_conTipo -> tipoVariable ID DOSPUNT . tipoDato asignacion
    (12) tipoDato -> . INTEGER
    (13) tipoDato -> . BOOLEAN

    INTEGER         shift and go to state 37
    BOOLEAN         shift and go to state 38

    tipoDato                       shift and go to state 36

state 32

    (27) imprimir -> PRINTLN LPAREN valor RPAREN .

    $end            reduce using rule 27 (imprimir -> PRINTLN LPAREN valor RPAREN .)


state 33

    (29) agregarElemento -> ID PUNTO ADD LPAREN . valor RPAREN
    (19) valor -> . NUMERO
    (20) valor -> . ID
    (21) valor -> . booleano
    (14) booleano -> . TRUE
    (15) booleano -> . FALSE

    NUMERO          shift and go to state 23
    ID              shift and go to state 24
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    valor                          shift and go to state 39
    booleano                       shift and go to state 25

state 34

    (30) obtenerElemento -> ID PUNTO GET LPAREN . NUMERO RPAREN

    NUMERO          shift and go to state 40


state 35

    (28) crearLista -> VAL ID DOSPUNT MUTABLE_LIST . MENOR tipoDato MAYOR IGUAL MUTABLE_LIST_OF LPAREN valor RPAREN

    MENOR           shift and go to state 41


state 36

    (9) declaracion_conTipo -> tipoVariable ID DOSPUNT tipoDato . asignacion
    (16) asignacion -> . asignacion_simple
    (17) asignacion -> .
    (18) asignacion_simple -> . IGUAL valor

    $end            reduce using rule 17 (asignacion -> .)
    IGUAL           shift and go to state 44

    asignacion                     shift and go to state 42
    asignacion_simple              shift and go to state 43

state 37

    (12) tipoDato -> INTEGER .

    IGUAL           reduce using rule 12 (tipoDato -> INTEGER .)
    $end            reduce using rule 12 (tipoDato -> INTEGER .)
    MAYOR           reduce using rule 12 (tipoDato -> INTEGER .)


state 38

    (13) tipoDato -> BOOLEAN .

    IGUAL           reduce using rule 13 (tipoDato -> BOOLEAN .)
    $end            reduce using rule 13 (tipoDato -> BOOLEAN .)
    MAYOR           reduce using rule 13 (tipoDato -> BOOLEAN .)


state 39

    (29) agregarElemento -> ID PUNTO ADD LPAREN valor . RPAREN

    RPAREN          shift and go to state 45


state 40

    (30) obtenerElemento -> ID PUNTO GET LPAREN NUMERO . RPAREN

    RPAREN          shift and go to state 46


state 41

    (28) crearLista -> VAL ID DOSPUNT MUTABLE_LIST MENOR . tipoDato MAYOR IGUAL MUTABLE_LIST_OF LPAREN valor RPAREN
    (12) tipoDato -> . INTEGER
    (13) tipoDato -> . BOOLEAN

    INTEGER         shift and go to state 37
    BOOLEAN         shift and go to state 38

    tipoDato                       shift and go to state 47

state 42

    (9) declaracion_conTipo -> tipoVariable ID DOSPUNT tipoDato asignacion .

    $end            reduce using rule 9 (declaracion_conTipo -> tipoVariable ID DOSPUNT tipoDato asignacion .)


state 43

    (16) asignacion -> asignacion_simple .

    $end            reduce using rule 16 (asignacion -> asignacion_simple .)


state 44

    (18) asignacion_simple -> IGUAL . valor
    (19) valor -> . NUMERO
    (20) valor -> . ID
    (21) valor -> . booleano
    (14) booleano -> . TRUE
    (15) booleano -> . FALSE

    NUMERO          shift and go to state 23
    ID              shift and go to state 24
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    valor                          shift and go to state 48
    booleano                       shift and go to state 25

state 45

    (29) agregarElemento -> ID PUNTO ADD LPAREN valor RPAREN .

    $end            reduce using rule 29 (agregarElemento -> ID PUNTO ADD LPAREN valor RPAREN .)


state 46

    (30) obtenerElemento -> ID PUNTO GET LPAREN NUMERO RPAREN .

    $end            reduce using rule 30 (obtenerElemento -> ID PUNTO GET LPAREN NUMERO RPAREN .)


state 47

    (28) crearLista -> VAL ID DOSPUNT MUTABLE_LIST MENOR tipoDato . MAYOR IGUAL MUTABLE_LIST_OF LPAREN valor RPAREN

    MAYOR           shift and go to state 49


state 48

    (18) asignacion_simple -> IGUAL valor .

    $end            reduce using rule 18 (asignacion_simple -> IGUAL valor .)


state 49

    (28) crearLista -> VAL ID DOSPUNT MUTABLE_LIST MENOR tipoDato MAYOR . IGUAL MUTABLE_LIST_OF LPAREN valor RPAREN

    IGUAL           shift and go to state 50


state 50

    (28) crearLista -> VAL ID DOSPUNT MUTABLE_LIST MENOR tipoDato MAYOR IGUAL . MUTABLE_LIST_OF LPAREN valor RPAREN

    MUTABLE_LIST_OF shift and go to state 51


state 51

    (28) crearLista -> VAL ID DOSPUNT MUTABLE_LIST MENOR tipoDato MAYOR IGUAL MUTABLE_LIST_OF . LPAREN valor RPAREN

    LPAREN          shift and go to state 52


state 52

    (28) crearLista -> VAL ID DOSPUNT MUTABLE_LIST MENOR tipoDato MAYOR IGUAL MUTABLE_LIST_OF LPAREN . valor RPAREN
    (19) valor -> . NUMERO
    (20) valor -> . ID
    (21) valor -> . booleano
    (14) booleano -> . TRUE
    (15) booleano -> . FALSE

    NUMERO          shift and go to state 23
    ID              shift and go to state 24
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    valor                          shift and go to state 53
    booleano                       shift and go to state 25

state 53

    (28) crearLista -> VAL ID DOSPUNT MUTABLE_LIST MENOR tipoDato MAYOR IGUAL MUTABLE_LIST_OF LPAREN valor . RPAREN

    RPAREN          shift and go to state 54


state 54

    (28) crearLista -> VAL ID DOSPUNT MUTABLE_LIST MENOR tipoDato MAYOR IGUAL MUTABLE_LIST_OF LPAREN valor RPAREN .

    $end            reduce using rule 28 (crearLista -> VAL ID DOSPUNT MUTABLE_LIST MENOR tipoDato MAYOR IGUAL MUTABLE_LIST_OF LPAREN valor RPAREN .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for ID in state 13 resolved as shift
WARNING: reduce/reduce conflict in state 0 resolved using rule (declaracion -> <empty>)
WARNING: rejected rule (comparacion -> <empty>) in state 0
WARNING: Rule (comparacion -> <empty>) is never reduced
